# Machine-Learning

./: LICENSE  README.md  pyproject.toml
Data Science/: basics_matplotlib.py
Data_Science/: basics_matplotlib.py  basics_numpy.py  basics_pandas.py
Learnings/: basics_pandas.py
Learnings/sklearn-examples/: linear_models.ipynb  quick_start.ipynb
Learnings/sklearn-examples/supervised learning/linear_models/classification_models/: ridge_classification.ipynb
Learnings/sklearn-examples/supervised learning/linear_models/regression_models/: LARS_regression.ipynb  bayesian_regression.ipynb  lasso_regression.ipynb  linear_regression.ipynb  logistics_regression.ipynb  ridge_regression.ipynb
machine-learning/Linear Regression/: imdb_rating_pred.py  salary_experience_pred.py  wine_quality_pred.py
machine-learning/data/Movie_Data_MLR/: cleaned_data.xlsx  data.xlsx  final_data.xlsx
machine-learning/data/Movie_Data_MLR/processed_data/: cleaned_data.xlsx  data.xlsx
machine-learning/data/Wine Quality/processed_data/: cleared_data.xlsx  data.xlsx  final_data.xlsx
test/: cuda.py  rapids.py
