[tool.poetry]
name = "machine-learning"
version = "0.1.0"
description = "For machine learning always"
authors = ["pratty010 <pratyushp010@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.0"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
geopy = "^2.4.1"


[tool.poetry.group.dev.dependencies]
openpyxl = "^3.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
